--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
     <footer class="footer">
       <div class="wrapper">
-        <div class="footer-text web">
+        <div class="footer-text">
           <div class="info">
             <h3>
               <span class="info-ship">Ship</span><span class="info-up">Up</span>
@@ -395,71 +395,6 @@
               <li>Terms</li>
               <li>Privacy</li>
             </ul>
-          </div>
-
-          <div class="social-media">
-            <h4>Social Media</h4>
-            <div class="social-media-icons">
-              <div class="social-media-icon-circle">
-                <img src="/assets/icons/facebook.svg" width=7.61" height="16.32"
-                alt="" />
-              </div>
-              <div class="social-media-icon-circle">
-                <img
-                  src="/assets/icons/twitter.svg"
-                  width="14.52"
-                  height="12"
-                  alt=""
-                />
-              </div>
-              <div class="social-media-icon-circle">
-                <img
-                  src="/assets/icons/whatsapp.svg"
-                  width="18"
-                  height="18"
-                  alt=""
-                />
-              </div>
-              <div class="social-media-icon-circle">
-                <img
-                  src="/assets/icons/instagram.svg"
-                  width="18"
-                  height="18"
-                  alt=""
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="footer-text mobile">
-          <div class="info">
-            <h3>
-              <span class="info-ship">Ship</span><span class="info-up">Up</span>
-            </h3>
-            <p>
-              ShipUp delivers an unparalleled customer service through dedicated
-              customer teams, engaged people working in an agile culture, and a
-              global footprint
-            </p>
-          </div>
-          <div class="explore-legal">
-            <div class="explore">
-              <h4>Explore</h4>
-              <ul>
-                <li>About Us</li>
-                <li>Our Warehouses</li>
-                <li>Blog</li>
-                <li>News and Media</li>
-              </ul>
-            </div>
-            <div class="legal">
-              <h4>Legal</h4>
-              <ul>
-                <li>Terms</li>
-                <li>Privacy</li>
-              </ul>
-            </div>
           </div>
 
           <div class="social-media">
